--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "stevebauman/location": "^6.6",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
