--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^5.10",
         "stevebauman/location": "^6.6",
         "tymon/jwt-auth": "^2.0"
